<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="3dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBowlers"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:text="@string/bowlers"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/o"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvBowlers"
            app:layout_constraintStart_toEndOf="@id/tvBowlers"
            app:layout_constraintTop_toTopOf="@id/tvBowlers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvBowlers"
            app:layout_constraintEnd_toStartOf="@id/tvRBowler"
            app:layout_constraintStart_toEndOf="@id/tvO"
            app:layout_constraintTop_toTopOf="@id/tvBowlers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRBowler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/r"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvBowlers"
            app:layout_constraintEnd_toStartOf="@id/tvW"
            app:layout_constraintStart_toEndOf="@id/tvM"
            app:layout_constraintTop_toTopOf="@id/tvBowlers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/w"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvBowlers"
            app:layout_constraintEnd_toStartOf="@id/tvEco"
            app:layout_constraintStart_toEndOf="@id/tvRBowler"
            app:layout_constraintTop_toTopOf="@id/tvBowlers" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/eco"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvBowlers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvW"
            app:layout_constraintTop_toTopOf="@id/tvBowlers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>